# raylib-hook

./: CMakeLists.txt  README.md  build.sh  install-hook.sh  install-raylib.sh  install.sh
.github/workflows/: ci.yml
examples/: first_window.hk  is_mouse_pressed.hk
src/: raylib_mod.c  raylib_mod.h
